--- a/MultiTenantWebApiStarter/appsettings.json
+++ b/MultiTenantWebApiStarter/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "tenant_a": "Host=localhost;Username=postgres;Password=postgres;Database=tenant_a",
+        "tenant_b": "Host=localhost;Username=postgres;Password=postgres;Database=tenant_b"
+    }
 }
